reverse-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: river-ingress
  labels:
    app.kubernetes.io/name: river-ingress

spec:
  rules:
    - host: minio.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: minio-console
                port:
                  number: 9001
    - host: backend.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
    - host: riverseg.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend-service
                port:
                  number: 8501
    - host: grafanariver.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
    - host: kafka.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kafka-service
                port:
                  number: 9092
    - host: grafanak8s.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: grafana-k8s-service
                port:
                  number: 3000
